  Fixed not showing a message to players that can't access the Team Manager because they
    don't have the required permission level.
  Energy Suspension Bridge lengths are now saved with the world. If players change the
    maximum length in the config and load a world with an Energy Suspension Bridge already
    active, it will check if the new maximum length is shorter and shut itself off.
  Minecraft 1.18 version only: Re-enabled Project E integration.
  Minecraft 1.18 version only: Fix Titanium worldgen using platinum configuration settings.
  Minecraft 1.18 version only: Fixed Show Ores command only counting blocks above Y level 0.
KNOWN PROBLEMS:
  If an Energy Suspension Bridge 1 block wide is destroyed, the energy bridge will not disappear.



v1.5 - December 22, 2022
INFO:
  I was originally planning to split the mod into 3 separate files, starting with
    this version. However, development is taking longer than expected, and that's
    why I've decided to delay some of the things I was planning for this version
    until the next major release.
NEW:
  Added new items. (Power Regulator, Dimensional Flux, and Matter/Energy Converter)
  Added 5 new beam emitter type items, but 1 is unused.
   - Heavy-Light Emitter, Energy Stabilizer, Matter/Energy Transformer, and High-Intensity Laser.
  Added Circuit Tier 9.
  Added Plasma Generator machine.
   - Deleted the crafting recipe for Plasma that was added in version 1.4.
  ReAdded Ring drops, if you have the Curios mod loaded.
   - Added the ability to disable Rings.
  The Dimensional Anchor now works! It protects you from Black Holes, and prevents
    you from traveling to other dimensions!
  Added the Survivor advancement.
  Added more mods to detect:
    Archer's Paradox, Create, CraftTweaker, CoFH Core, Cyclops Core, Ensorcellation,
    Environmental, Environmental Materials, Environmental Tech, Ex Nihilo: Sequentia,
    Integration Foregoing, Integrated Dynamics, Integrated Tunnels, Integrated Terminals,