@@ -12,6 +12,9 @@ FIXED:
   Energy Suspension Bridge lengths are now saved with the world. If players change the
     maximum length in the config and load a world with an Energy Suspension Bridge already
     active, it will check if the new maximum length is shorter and shut itself off.
+  Minecraft 1.18 version only: Fix not being able to quit a world / shutdown a server properly
+    if you were near a BlockNetwork TileEntity.
+    - Data Cable, Energy Wire, Energy Suspension Bridge, or Laser Housing.
   Minecraft 1.18 version only: Re-enabled Project E integration.
   Minecraft 1.18 version only: Fix Titanium worldgen using platinum configuration settings.
   Minecraft 1.18 version only: Fixed Show Ores command only counting blocks above Y level 0.
